--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Sunnery</h1>
-                    <h2>Ancient Wellness, Modern Refreshment</h2>
+                    <h2>Sunshine in a Can</h2>
                     <p>Discover the perfect blend of probiotic power and ancient Indian wisdom. Our refreshing soda harnesses the secret benefits of rare Himalayan roots, creating a drink that nourishes your gut, calms your mind, and transports you to a tropical paradise.</p>
                     <a href="#products" class="cta-button">Taste the Magic</a>
                 </div>
@@ -509,7 +509,7 @@
             <div class="story-content fade-in">
                 <h2>The Ancient Secret</h2>
                 <div class="story-text">
-                    <p>Deep in the misty mountains of the Himalayas, ancient healers discovered a remarkable root that has been their secret to wellness for over 2,000 years. This mystical Ashwagandha root, known as the "Indian Winter Cherry," possesses extraordinary adaptogenic properties that help the body naturally balance stress and restore harmony.</p>
+                    <p>Deep in the misty highlands of the Indian Subcontinent, ancient healers discovered a remarkable root that has been their secret to wellness for over 2,000 years. This mystical Ashwagandha root, known as the "Nannari," possesses extraordinary adaptogenic properties that help the body naturally balance stress and restore harmony.</p>
                     
                     <p>We've carefully combined this time-honored wisdom with modern probiotic science, creating a refreshing soda that not only tastes incredible but actively supports your digestive health and mental well-being. Each bottle contains billions of beneficial bacteria alongside the concentrated essence of this sacred root.</p>
                     
@@ -521,7 +521,7 @@
                 <div class="feature-card fade-in">
                     <div class="icon">🌿</div>
                     <h3>Ancient Wisdom</h3>
-                    <p>Infused with rare Himalayan Ashwagandha root, used for millennia to promote balance and vitality</p>
+                    <p>Infused with rare Tamil Ashwagandha root, used for millennia to promote balance and vitality</p>
                 </div>
                 <div class="feature-card fade-in">
                     <div class="icon">🦠</div>
@@ -552,7 +552,7 @@
                 <div class="product-card fade-in">
                     <div class="product-image">🍍</div>
                     <h3>Pineapple Zen</h3>
-                    <p>Sweet, tangy pineapple meets the earthy richness of Himalayan roots in this refreshing probiotic elixir.</p>
+                    <p>Sweet, tangy pineapple meets the earthy richness of Tamil roots in this refreshing probiotic elixir.</p>
                     <div class="product-price">$4.99</div>
                     <a href="#" class="buy-button">Order Now</a>
                 </div>
@@ -607,7 +607,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Email: hello@sunnery.com</p>
+                    <p>Email: Sunnerydrink@gmail.com</p>
                     <p>Phone: (555) 123-SUN</p>
                     <p>Follow us for daily wellness tips!</p>
                 </div>
